--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prueba de Git</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <h2> soy javier</h2>
+    
+    <script src="./main.js"></script>
 </body>
 </html>
