Actualizacion de repo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba de Git</title>
-    
+    <link rel="stylesheet" href="./bootstrap.min (1).css">
 </head>
 <body>
-    
-    <script type="module" src="./carga.js"></script>
+    <button class="btn btn-primary" onclick="carga()">cargar elemento</button>
+    <button class="btn btn-success" onclick="muestra()">mostrar los elementos</button>
+    <div id="meme" class="card"></div>
+    <script src="./rectangulo.js"></script>
 </body>
 </html>
