clase de consulta 02/11

--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de Git</title>
-    <link rel="stylesheet" href="./bootstrap.min (1).css">
+    <title>1er Año TSDSFS - ITS</title>
+    <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 <body>
-    <button class="btn btn-primary" onclick="carga()">cargar elemento</button>
-    <button class="btn btn-success" onclick="muestra()">mostrar los elementos</button>
-    <div id="meme" class="card"></div>
-    <script src="./rectangulo.js"></script>
+    <nav class="navbar navbar-expand-md bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">ITS CIPOLLETTI</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link"  href="./grup1">Grupo 1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup2">Grupo 2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup3">Grupo 3</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup4">Grupo 4</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup5">Grupo 5</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup6">Grupo 6</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./grup7">Grupo 7</a>
+              </li>
+            
+            </ul>
+            
+          </div>
+        </div>
+      </nav>
+      <script src="./bootstrap.bundle.min.js"></script>
 </body>
 </html>
